infrastructure/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: BTG Pactual - Fondos de Inversion - EC2 Free Tier

Parameters:
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Nombre del Key Pair para acceso SSH

  MongoDbUri:
    Type: String
    NoEcho: true
    Description: URI de conexion a MongoDB Atlas

  JwtSecret:
    Type: String
    NoEcho: true
    Description: Clave secreta para firmar tokens JWT

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group para btg-fondos
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0b0b78dcacbab728f
      KeyName: !Ref KeyPairName
      SecurityGroups:
        - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: btg-fondos
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum install -y java-17-amazon-corretto
          cat > /home/ec2-user/start-app.sh << 'EOF'
          #!/bin/bash
          java -jar /home/ec2-user/fondos-0.0.1-SNAPSHOT.jar \
            --spring.data.mongodb.uri="${MongoDbUri}" \
            --jwt.secret="${JwtSecret}" &
          EOF
          chmod +x /home/ec2-user/start-app.sh
          chown ec2-user:ec2-user /home/ec2-user/start-app.sh

Outputs:
  PublicIp:
    Description: IP publica de la instancia EC2
    Value: !GetAtt EC2Instance.PublicIp

  PublicDns:
    Description: DNS publico de la instancia EC2
    Value: !GetAtt EC2Instance.PublicDnsName

  SSHCommand:
    Description: Comando para conectarse por SSH
    Value: !Sub ssh -i ${KeyPairName}.pem ec2-user@${EC2Instance.PublicIp}

  AppUrl:
    Description: URL de la aplicacion
    Value: !Sub http://${EC2Instance.PublicIp}:8080
